# GPS_TS

./: CMakeLists.txt  CMakeUserPresets.json  README.md  qt.cmake
Common/: CMakeLists.txt  Logger.cpp  Logger.h  Observer.cpp  Observer.h  TimeSynchronizer.cpp  TimeSynchronizer.h  encoding_fix.h
GPS_TS/: CMakeLists.txt  encoding_fix.h  main.cpp
GPS_TS/core/: Application.cpp  Application.h  ConfigManager.h  Settings.cpp  Settings.h
GPS_TS/network/: SerialPort.cpp  SerialPort.h  TcpServer.h
GPS_TS/parser/: NmeaGGA.cpp  NmeaGLL.cpp  NmeaGLL.h  NmeaGSA.cpp  NmeaGSV.cpp  NmeaIParser.h  NmeaPMTK.cpp  NmeaPMTK.h  NmeaRMC.cpp  NmeaRMC.h  NmeaVTG.cpp  NmeaVTG.h
GPS_TS_Client/: Application.cpp  Application.h  CMakeLists.txt  Settings.cpp  Settings.h  TcpClient.cpp  TcpClient.h  main.cpp
GPS_TS_Client/core/: Application.cpp  Application.h  Logger.h  Settings.cpp  Settings.h  TimeSynchronizer.cpp  TimeSynchronizer.h
GPS_TS_Client/network/: TcpClient.cpp  TcpClient.h
GPS_TS_Observer/: CMakeLists.txt  Connect.cpp  Connect.h  Connect.ui  GPS_TS_Observer.rc  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  main.cpp
GPS_TS_Server/: Application.cpp  Application.h  CMakeLists.txt  SerialPort.cpp  SerialPort.h  Settings.cpp  Settings.h  TcpServer.cpp  TcpServer.h  main.cpp
GPS_TS_Server/core/: Application.cpp  Application.h  Logger.cpp  Settings.cpp  Settings.h  TimeSynchronizer.cpp  TimeSynchronizer.h
GPS_TS_Server/network/: SerialPort.cpp  SerialPort.h  TcpServer.cpp  TcpServer.h
GPS_TS_Server/parser/: NmeaGGA.cpp  NmeaGGA.h  NmeaGLL.cpp  NmeaGLL.h  NmeaGSA.cpp  NmeaGSA.h  NmeaGSV.cpp  NmeaGSV.h  NmeaIParser.h  NmeaPMTK.cpp  NmeaPMTK.h  NmeaParserFactory.h  NmeaRMC.cpp  NmeaRMC.h  NmeaVTG.cpp  NmeaVTG.h
